# skia-haskell

./: .gitignore  CHANGELOG.md  build.sh  hello.cpp  skia-haskell.cabal
app/: Main.hs
cpp/: SkiaSDLExample.cpp  build.sh  hello.cpp
src/Skia/: Canvas.hs  Color.hs  Paint.hs  Path.hs  Types.hs
src/Skia/Canvas/: Effect.hs  Raw.hs  Type.hs
src/Skia/Paint/: PaintSpec.hs
