cabal-version:      3.14
name:               skia-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common setup
    ghc-options: -Wall
    build-depends:
        base                    >= 4.20.0.0    && < 5
      , effectful-core          >= 2.5.1.0     && < 2.6
      , sdl2                    >= 2.5.5       && < 2.6
      , inline-c-cpp            >= 0.5.0.2     && < 0.6
      , inline-c                >= 0.9.1.10    && < 0.10
      , lens                    >= 5.3.3       && < 6
      , filepath                >= 1.5.4       && < 1.6
      , vector                  >= 0.13.2      && < 0.14
      , bytestring              >= 0.11        && < 0.13
      , os-string               >= 2.0.7       && < 2.1
      , data-default-class      >= 0.1         && < 1
      , colour                  >= 2.3.6       && < 2.4


    default-language: GHC2024
    default-extensions:
        TypeData
      , TypeFamilies


    -- cxx-options: -std=c++17 -Wall



library
    import:           setup
    exposed-modules:
      -- Skia.Canvas
      Skia.Canvas.Raw
      Skia.Canvas.Type

      Skia.Color
      Skia.Path

      Skia.Paint

      MyLib

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

    ghc-options:
      -optcxx-std=c++17
      -optcxx-Wall

    -- cxx-sources:
    --   src/Skia/Canvas/Raw.cxx

    cxx-options:
      -std=c++17
      -framework CoreFoundation
      -framework CoreGraphics
      -framework CoreText
      -framework CoreServices
      -Wall

    extra-libraries:
      skia
      z
      jpeg
      png
      expat

    extra-lib-dirs:
      /Users/frank/workspace/skia/out/Static
      /opt/homebrew/opt/jpeg-turbo/lib

    include-dirs:
      /Users/frank/workspace/skia/
      /opt/homebrew/opt/jpeg-turbo/include

    -- pkgconfig-depends:
    --     expat
    --   , png
    --   , z

executable skia-haskell
    import:           setup
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        skia-haskell

    hs-source-dirs:   app

test-suite skia-haskell-test
    import:           setup
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        skia-haskell
